# py_learn

./: .gitignore  CONTEXT.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  plan.md  pyproject.toml
docs/: chapter-a-design.md  exercise-design.md  q-md-writing-guide.md
src/py_learn/: __init__.py  cli.py
src/py_learn/commands/: __init__.py  ls.py  new_cmd.py  next_cmd.py  resume.py  run.py  save.py  status_cmd.py  submit.py
src/py_learn/content/A/: exercise.toml
src/py_learn/content/A/A.1/: a.py  cases.py  exercise.toml  q.md
src/py_learn/content/A/A.10/: a.py  cases.py  exercise.toml  q.md
src/py_learn/content/A/A.11/: a.py  cases.py  exercise.toml  q.md
src/py_learn/content/A/A.12/: a.py  cases.py  exercise.toml  q.md
src/py_learn/content/A/A.13/: a.py  cases.py  exercise.toml  q.md
src/py_learn/content/A/A.14/: a.py  cases.py  exercise.toml  q.md
src/py_learn/content/A/A.15/: a.py  cases.py  exercise.toml  q.md
src/py_learn/content/A/A.2/: a.py  cases.py  exercise.toml  q.md
src/py_learn/content/A/A.3/: a.py  cases.py  exercise.toml  q.md
src/py_learn/content/A/A.4/: a.py  cases.py  exercise.toml  q.md
src/py_learn/content/A/A.5/: a.py  cases.py  exercise.toml  q.md
src/py_learn/content/C/: exercise.toml
src/py_learn/content/D/: exercise.toml
src/py_learn/content/oop/: exercise.toml
src/py_learn/domain/: __init__.py  models.py
src/py_learn/io/: __init__.py  ignore.py  paths.py  report_renderer.py
src/py_learn/services/: exercise_scanner.py  snapshot_store.py  validator.py  workspace_manager.py
tests/: test_core.py
(+51 files in other folders)
