[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_learn"
version = "0.1.0"
description = "面向 Python 初学者的命令行学习工具"
requires-python = ">=3.11"
dependencies = ["rich>=13.0"]

[project.scripts]
pl = "py_learn.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
py_learn = ["content/**/*"]
